syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.victor.grpc.api.hello";
option java_outer_classname = "HelloWorldProto";

package hello;

// The greeting service definition.
service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse) {}
    rpc MultiGreet (HelloRequest) returns (stream HelloResponse) {}
    rpc StreamGreet (stream HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}